sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:14: error: not found: value echenge
    echenge(i,min);
    ^