sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var i: Int = 0;
  var j: Int = 0;
  
  for(i<-1 to 10){
    var min = i;
    for(j<-i to 10){
       if(plusPetit(j,min)){
      min = j;;
    	}
    }
   
    echenge(i,min);
  }

}